# ros2_ws

install/: local_setup.sh  setup.sh
install/bringup/share/bringup/: local_setup.sh  package.dsv  package.sh
install/bringup/share/bringup/cmake/: bringupConfig.cmake
install/bringup/share/bringup/launch/: localization_launch.py  navigation_launch.py
install/bringup/share/bringup/models/turtlebot3_burger/: model.sdf
install/bringup/share/bringup/models/turtlebot3_waffle/: model.sdf
install/bringup/share/bringup/params/: nav2_params.yaml  turtlebot3_burger_bridge.yaml
install/bringup/share/bringup/urdf/: turtlebot3_waffle.urdf
install/demos/lib/demos/: param_talker.py  talker_original.py
install/demos/share/demos/: package.bash  package.dsv  package.sh  package.zsh
install/demos/share/demos/config/: params.yaml
install/demos/share/demos/topics/: listener_L1.py
install/obstacle_detection/share/obstacle_detection/: package.bash  package.dsv  package.sh  package.zsh
install/turtlesim_goal/lib/turtlesim_goal/: waypoint_goal.py
install/turtlesim_goal/share/turtlesim_goal/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.sh  package.zsh
labbar/: README.md
labbar/lab1/: .gitignore  Makefile  README.md
labbar/lab1/docker/: Dockerfile  docker-compose.yaml
labbar/lab1/src/demos/: CMakeLists.txt
labbar/lab1/src/demos/demos/parameters/: config_reader.py
labbar/lab1/src/demos/demos/services/: service_client.py
labbar/lab1/src/demos/demos/topics/: listener_L3.py  listener_original.py  talker_original.py
labbar/lab1/src/turtlesim_goal/: CMakeLists.txt
labbar/lab1/src/turtlesim_goal/turtlesim_goal/: gotogoal.py
labbar/lab2/: README.md
labbar/lab2/src/bringup/: .gazebo.dsv.in  CMakeLists.txt
labbar/lab2/src/bringup/launch/: bringup_launch.py  main.launch.py  rviz_launch.py  slam_launch.py
labbar/lab2/src/bringup/rviz/: nav2_default_view.rviz
labbar/lab2/src/bringup/urdf/: turtlebot3_burger.urdf
labbar/lab2/src/obstacle_detection/: CMakeLists.txt  package.xml
labbar/lab2/src/obstacle_detection/launch/: obstacle_detection.launch.py
labbar/lab2/src/obstacle_detection/obstacle_detection/: obstacle_detection.py
log/: latest_build
